// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add Recipient item > should render with exchange amount 1`] = `
<DocumentFragment>
  <div
    class="border-b border-dashed border-theme-secondary-300 last:border-none last:pb-0 dark:border-theme-secondary-800 py-3"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
    >
      <div
        class="flex w-full flex-1 flex-row items-center space-x-4 overflow-auto sm:flex-col sm:items-start sm:space-x-0 sm:space-y-1"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Recipient #2
        </div>
        <div
          class="max-w-full overflow-auto sm:w-full"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-row items-center space-x-4 overflow-auto sm:w-auto sm:flex-col sm:items-start sm:space-x-0 sm:space-y-1 sm:pl-7"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          <span
            class="hidden sm:inline"
            data-testid="AddRecipientItem--exchangeAmount"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              $0.00
            </span>
          </span>
          <span
            class="sm:hidden"
          >
            Amount
          </span>
        </div>
        <div
          class="flex flex-1 justify-end font-semibold text-theme-secondary-700 dark:text-theme-secondary-200 sm:text-theme-secondary-900"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            1 DARK
          </span>
        </div>
      </div>
      <div
        class="w-full sm:w-auto"
      >
        <button
          class="w-full sm:w-auto css-15yk9k4"
          data-testid="AddRecipientItem--deleteButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="flex items-center space-x-2 py-1"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="trash"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="block sm:hidden"
              >
                Remove
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Recipient item > should render without exchange amount 1`] = `
<DocumentFragment>
  <div
    class="border-b border-dashed border-theme-secondary-300 last:border-none last:pb-0 dark:border-theme-secondary-800 py-3"
    data-testid="AddRecipientItem"
  >
    <div
      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
    >
      <div
        class="flex w-full flex-1 flex-row items-center space-x-4 overflow-auto sm:flex-col sm:items-start sm:space-x-0 sm:space-y-1"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Recipient #2
        </div>
        <div
          class="max-w-full overflow-auto sm:w-full"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex w-full flex-row items-center space-x-4 overflow-auto sm:w-auto sm:flex-col sm:items-start sm:space-x-0 sm:space-y-1 sm:pl-7"
      >
        <div
          class="whitespace-nowrap font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          <span>
            Amount
          </span>
        </div>
        <div
          class="flex flex-1 justify-end font-semibold text-theme-secondary-700 dark:text-theme-secondary-200 sm:text-theme-secondary-900"
        >
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            1 DARK
          </span>
        </div>
      </div>
      <div
        class="w-full sm:w-auto"
      >
        <button
          class="w-full sm:w-auto css-15yk9k4"
          data-testid="AddRecipientItem--deleteButton"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="flex items-center space-x-2 py-1"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="trash"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="block sm:hidden"
              >
                Remove
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
